--- a/Exercise/mlph_sheet06/sheet06.ipynb
+++ b/Exercise/mlph_sheet06/sheet06.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,12 +27,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# load the data\n",
+    "We load [`vostok.txt`](data/vostok.txt) which contains data measured from air which was trappend in ice-cores extracted in Antarctica. Here, it is attempted to estimate the global temperature anomaly given three features: The age of the air, the cabon dioxide concentration and the dust concentration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lines.shape=(3729, 4)\n",
+      "features.shape=(3, 3729), labels.shape=(3729,)\n"
+     ]
+    }
+   ],
+   "source": [
     "with open('data/vostok.txt', 'r') as f:\n",
     "    lines = f.readlines()\n",
     "    \n",
@@ -55,24 +70,82 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from sklearn.linear_model import LinearRegression\n",
-    "\n",
-    "# TODO: fit the linear regressor and compute the sum of square deviations"
+    "We apply a simple linear regression model to the data, minimizing the sum of squares."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sls=6362.9375\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "# TODO: fit the linear regressor and compute the sum of square deviations\n",
+    "reg = LinearRegression().fit(X=features.T, y=labels.T)\n",
+    "preds = reg.predict(features.T)\n",
+    "sls = np.sum((preds-labels)**2)\n",
+    "\n",
+    "print(f'{sls=}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can estimate parameter relevance by the *permutation test*, that is to test wether the i-th feature is relevant, we randomly permute the data along its axis. Formally, for a data matrix $\\mathbf{X} \\in \\mathbb{R}^{p \\times N}$, we obtain a new data matrix $\\tilde{\\mathbf{X}}$ by setting $\\tilde{\\mathbf{X}}_i = \\pi (\\mathbf{X}_i)$, such that the $i$-th row is permuted via a permutation $\\pi$.\n",
+    "Small differences compared to the original SSqs indicates a more irrelevant feature. We repeat this procedure to minimize statistical errors."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Permuting the features leads to difference in SSqs of [  453.2253125 12805.01375     163.4540918]\n",
+      "This procedure thus assumes CO₂ to be the most important feature\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: for each feature, randomly permute it amongst the samples, \n",
-    "#       refit the regressor and compte sum of squared deviations"
+    "#       refit the regressor and compte sum of squared deviations\n",
+    "ITERS = 50\n",
+    "n = features.shape[0]\n",
+    "\n",
+    "ssqs = np.zeros((ITERS, n))\n",
+    "for i in range(ITERS):\n",
+    "    for j in range(n):\n",
+    "        X_tilde = np.copy(features)\n",
+    "        pi_x = np.random.permutation(X_tilde[j])\n",
+    "        X_tilde[j] = pi_x \n",
+    "\n",
+    "        reg = LinearRegression().fit(X=X_tilde.T, y=labels.T)\n",
+    "        preds = reg.predict(X_tilde.T)\n",
+    "        ssqs[i,j] = np.sum((preds-labels)**2)\n",
+    "\n",
+    "mean_ssqs = ssqs.mean(axis=0)\n",
+    "diffs = mean_ssqs - sls\n",
+    "m = diffs.argmax()\n",
+    "print(f'Permuting the features leads to difference in SSqs of {diffs}')\n",
+    "print(f'This procedure thus assumes {feature_names[m]} to be the most important feature')\n",
+    "\n",
+    "    "
    ]
   },
   {
@@ -295,9 +368,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:mlph]",
+   "display_name": "Python 3.9.13 ('mlph')",
    "language": "python",
-   "name": "conda-env-mlph-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -310,6 +383,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "7f404d04eee6aa92df068a90f9cb4dd409cc64a796113fb37548bd2f5ce77890"
+   }
   }
  },
  "nbformat": 4,
